--- a/res/layout-sw600dp/activity_main.xml
+++ b/res/layout-sw600dp/activity_main.xml
@@ -78,16 +78,16 @@
 		android:id="@+id/levels"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
-		android:paddingLeft="0dp"
+		android:paddingLeft="24dp"
 		android:paddingRight="0dp"
 	   	android:layout_below="@+id/header"
-	   	android:paddingTop="12dp"
-	   	android:paddingBottom="12dp"
+	   	android:padding="24dp"
 	   	android:listSelector="@android:color/transparent"
 	   	android:fadingEdgeLength="0dp"
 	   	android:numColumns="@string/levelsGridSize"
 	   	android:stretchMode="columnWidth"
-	   	android:verticalSpacing="12dip"
+	   	android:verticalSpacing="24dip"
+	   	android:horizontalSpacing="24dip"
 	   	android:cacheColorHint="#00000000"
      	android:divider="#ff0000"
      	android:dividerHeight="1dp"	
